--- a/intro.ipynb
+++ b/intro.ipynb
@@ -37,67 +37,51 @@
    },
    "outputs": [],
    "source": [
-    "# @title Test\n",
-    "# from ipywidgets import widgets\n",
-    "# from IPython.display import YouTubeVideo\n",
-    "# from IPython.display import IFrame\n",
-    "# from IPython.display import display\n",
+    "@title Test\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import YouTubeVideo\n",
+    "from IPython.display import IFrame\n",
+    "from IPython.display import display\n",
     "\n",
     "\n",
-    "# class PlayVideo(IFrame):\n",
-    "#   def __init__(self, id, source, page=1, width=400, height=300, **kwargs):\n",
-    "#     self.id = id\n",
-    "#     if source == 'Bilibili':\n",
-    "#       src = f'https://player.bilibili.com/player.html?bvid={id}&page={page}'\n",
-    "#     elif source == 'Osf':\n",
-    "#       src = f'https://mfr.ca-1.osf.io/render?url=https://osf.io/download/{id}/?direct%26mode=render'\n",
-    "#     super(PlayVideo, self).__init__(src, width, height, **kwargs)\n",
+    "class PlayVideo(IFrame):\n",
+    "  def __init__(self, id, source, page=1, width=400, height=300, **kwargs):\n",
+    "    self.id = id\n",
+    "    if source == 'Bilibili':\n",
+    "      src = f'https://player.bilibili.com/player.html?bvid={id}&page={page}'\n",
+    "    elif source == 'Osf':\n",
+    "      src = f'https://mfr.ca-1.osf.io/render?url=https://osf.io/download/{id}/?direct%26mode=render'\n",
+    "    super(PlayVideo, self).__init__(src, width, height, **kwargs)\n",
     "\n",
     "\n",
-    "# def display_videos(video_ids, W=400, H=300, fs=1):\n",
-    "#   tab_contents = []\n",
-    "#   for i, video_id in enumerate(video_ids):\n",
-    "#     out = widgets.Output()\n",
-    "#     with out:\n",
-    "#       if video_ids[i][0] == 'Youtube':\n",
-    "#         video = YouTubeVideo(id=video_ids[i][1], width=W,\n",
-    "#                              height=H, fs=fs, rel=0)\n",
-    "#         print(f'Video available at https://youtube.com/watch?v={video.id}')\n",
-    "#       else:\n",
-    "#         video = PlayVideo(id=video_ids[i][1], source=video_ids[i][0], width=W,\n",
-    "#                           height=H, fs=fs, autoplay=False)\n",
-    "#         if video_ids[i][0] == 'Bilibili':\n",
-    "#           print(f'Video available at https://www.bilibili.com/video/{video.id}')\n",
-    "#         elif video_ids[i][0] == 'Osf':\n",
-    "#           print(f'Video available at https://osf.io/{video.id}')\n",
-    "#       display(video)\n",
-    "#     tab_contents.append(out)\n",
-    "#   return tab_contents\n",
+    "def display_videos(video_ids, W=400, H=300, fs=1):\n",
+    "  tab_contents = []\n",
+    "  for i, video_id in enumerate(video_ids):\n",
+    "    out = widgets.Output()\n",
+    "    with out:\n",
+    "      if video_ids[i][0] == 'Youtube':\n",
+    "        video = YouTubeVideo(id=video_ids[i][1], width=W,\n",
+    "                             height=H, fs=fs, rel=0)\n",
+    "        print(f'Video available at https://youtube.com/watch?v={video.id}')\n",
+    "      else:\n",
+    "        video = PlayVideo(id=video_ids[i][1], source=video_ids[i][0], width=W,\n",
+    "                          height=H, fs=fs, autoplay=False)\n",
+    "        if video_ids[i][0] == 'Bilibili':\n",
+    "          print(f'Video available at https://www.bilibili.com/video/{video.id}')\n",
+    "        elif video_ids[i][0] == 'Osf':\n",
+    "          print(f'Video available at https://osf.io/{video.id}')\n",
+    "      display(video)\n",
+    "    tab_contents.append(out)\n",
+    "  return tab_contents\n",
     "\n",
     "\n",
-    "# video_ids = [('Youtube', 'cV2q-vpdKUA'), ('Bilibili', 'BV1Zg4y1A7tJ')]\n",
-    "# tab_contents = display_videos(video_ids, W=854, H=480)\n",
-    "# tabs = widgets.Tab()\n",
-    "# tabs.children = tab_contents\n",
-    "# for i in range(len(tab_contents)):\n",
-    "#   tabs.set_title(i, video_ids[i][0])\n",
-    "# display(tabs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "execution": {},
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Concepts map\n",
-    "\n",
-    "<p align='center'><img src='https://github.com/neuromatch/NeuroAI_Course/blob/main/tutorials/static/NeuroAI_concept_map.png?raw=True' alt='NeuroAI Concept Map'/></p>\n",
-    "\n",
-    "*Created by Patrick Mineault*"
+    "video_ids = [('Youtube', 'cV2q-vpdKUA'), ('Bilibili', 'BV1Zg4y1A7tJ')]\n",
+    "tab_contents = display_videos(video_ids, W=854, H=480)\n",
+    "tabs = widgets.Tab()\n",
+    "tabs.children = tab_contents\n",
+    "for i in range(len(tab_contents)):\n",
+    "  tabs.set_title(i, video_ids[i][0])\n",
+    "display(tabs)"
    ]
   },
   {
@@ -134,9 +118,7 @@
     "  - Interacting with other people from other disciplines fruitfully\n",
     "  - Do research (reading papers, implementing previous SOTA, coding new methods, evaluating diff methods) in NeuroAI\n",
     "  - Communicating their research in ways that are comprehensible to their target audience\n",
-    "\n",
-    "\n",
-    "<p align='center'><img src='https://github.com/neuromatch/NeuroAI_Course/blob/main/tutorials/static/NeuroAI_big_tent.png?raw=True' alt='NeuroAI Big Tent image'/></p>"
+    "\n"
    ]
   }
  ],
